--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-loader": "^8.0.5",
     "eslint-loader": "^3.0.3",
     "immutable": "^4.0.0-rc.12",
-    "mongodb": "^3.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -22,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"nodemon server/index.js"
+    "server": "cd server && npm run start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,8 +39,6 @@
     ]
   },
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
-  },
-  "proxy": "http://localhost:3000"
+    "body-parser": "^1.19.0"
+  }
 }
