--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "supervisor ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
@@ -12,7 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
