--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
+    "customize-cra": "^0.9.1",
     "eslint-loader": "^3.0.3",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.12.0",
@@ -18,8 +19,8 @@
     "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd server && npm run start"
@@ -40,7 +41,13 @@
     ]
   },
   "devDependencies": {
-    "body-parser": "^1.19.0"
+    "babel-plugin-import": "^1.13.0",
+    "body-parser": "^1.19.0",
+    "node-sass": "^4.13.0",
+    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewired": "^2.1.5",
+    "sass-loader": "^8.0.0",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "proxy": "http://localhost:8080"
 }
