--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
     "customize-cra": "^0.9.1",
@@ -17,7 +21,8 @@
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -48,6 +53,7 @@
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewired": "^2.1.5",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.1",
     "webpack-bundle-analyzer": "^3.6.0"
   },
   "proxy": "http://localhost:8080"
