SR_增加账号注册功能

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types/"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
@@ -22,5 +26,10 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "types": [
+    "node",
+    "jasmine"
+  ],
+  "extends": "./paths.json"
 }
