--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^2.0.15",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
+    "cors": "^2.8.5",
     "customize-cra": "^0.9.1",
     "eslint-loader": "^3.0.3",
     "immutable": "^4.0.0-rc.12",
@@ -18,6 +20,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
@@ -56,5 +59,6 @@
     "ts-loader": "^6.2.1",
     "webpack-bundle-analyzer": "^3.6.0"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "homepage": "."
 }
